# BladeEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build_run.sh  compose.yml  get_dependencies.sh  hot_reload.sh  run-blade.sh  run.sh
include/: base_character.h  base_rect.h  common_def.h  core.h  map.h  player.h  player_character.h  transform.h
include/kernel/: core.h  scene_manager.h  window.h
include/renderer/: window.h
include/utils/: logger.h
src/: base_character.cpp  base_rect.cpp  core.cpp  main.cpp  map.cpp  player_character.cpp  transform.cpp
src/kernel/: core.cpp  scene_manager.cpp  window.cpp
src/renderer/: window.cpp
